--- a/style.css
+++ b/style.css
@@ -48,11 +48,11 @@ nav a {
     font-size: 25px;
     font-family: 'Playfair Display';
     padding:10px 10px;
-    margin: 1rem 2rem;
+    margin: 1rem 1rem;
     font-weight: 700;
 }
 
-nav a:nth-child(1) {
+nav a:nth-child(2) {
     background-image: url(img/insta\ before.png);
     background-size: 70%;
     background-repeat: no-repeat;
@@ -64,7 +64,7 @@ nav a:hover {
     transition: 600ms ;
 }
 
-nav a:nth-child(1):hover {
+nav a:nth-child(2):hover {
     box-shadow: none;
     background-image: url(img/insta.png);
     background-size: 80%;
@@ -108,6 +108,31 @@ nav a:nth-child(1):hover {
     width: 100%;
     position:relative;
     opacity: 0.8;
+
+    animation-name: animateBanner;
+    animation-direction: alternate-reverse;
+    animation-duration: 15s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-play-state: running;
+    animation-timing-function: ease-out;
+}
+
+@keyframes animateBanner {
+    0%{
+        background-image: url(img/view.png);
+    }20%{
+        background-image: url(img/view2.png);
+    }40%{
+        background-image: url(img/counterWendy.png);
+    }60%{
+        /* background-image: ; */
+    }80%{
+        /* background-image: ; */
+    }100%{
+        /* background-image: ; */
+    }
+
 }
 
 .banner-area h2 {
@@ -168,7 +193,8 @@ nav a:nth-child(1):hover {
 
 .card {
     aspect-ratio: 5/7;
-    background-color: rgba(255,255,255,0.5);
+
+    /* background-color: rgba(255,255,255,0.5); */
     position: absolute;
     transition: 800ms cubic-bezier(.03,.97,.33,.94);
 }
@@ -187,17 +213,21 @@ nav a:nth-child(1):hover {
 }
 
 .little-card:nth-child(1) {
-    background-image: url(img/);
-    background-size: cover;
+    background-image: url(img/lobDogBanner.png);
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .little-card:nth-child(3) {
-    background-image: url(img/);
-    background-size: cover;
+    background-image: url(img/adBoard.png);
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .little-card:nth-child(5) {
-    background-image: url(img/);
+    background-image: url(img/TVburger.png);
     background-size: cover;
 }
 
@@ -214,7 +244,7 @@ nav a:nth-child(1):hover {
 }
 
 .big-card:nth-child(4) {
-    background-image: url(img/wendy22.JPG);
+    background-image: url(img/wendy22.jpg);
     background-size: cover;
     transform: translateX(-5%);
     rotate: 0deg; 
@@ -227,7 +257,7 @@ nav a:nth-child(1):hover {
 }
 
 .big-card:nth-child(8) {
-    background-image: url(img/wendy2.JPG);
+    background-image: url(img/counterWendy.png);
     background-size: cover;
     transform: translateX(9%); 
     rotate: 5deg;
@@ -279,9 +309,35 @@ h4 {
 }
 
 .menu-area {
-    background-image: url();
-    position:relative;
-    margin: 0px;
-    height:70vh;
-    width: 80%;
+    display: flex;
+    position: center;
+    margin: auto;
+    height:80vh;
+    width: 95%;
+    justify-content: center;
+
+    background: linear-gradient(black, rgb(0, 0, 0)) padding-box,
+    linear-gradient(to right, rgb(196, 106, 103), rgb(177, 28, 28)) border-box;
+    border-radius: 2em;
+    border: 4px solid transparent;
+}
+
+.menuLeft {
+    justify-content: center;
+    margin:1rem;
+    height: 95%;
+    width: 48%;
+    background-image: url(img/menuLeft.png);
+    background-size: cover;
+    border-radius: 10px;
+}
+
+.menuRight {
+    justify-content: center;
+    margin:1rem;
+    height: 95%;
+    width: 40%;
+    background-image: url(img/menuRight.png);
+    background-size: cover;
+    border-radius: 10px;
 }
